--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ImageConverter</string>
+    <string name="successful_convertation">Конвертация успешно выполнена.</string>
+    <string name="error_convertation">\"Ошибка при конвертации изображения: \"</string>
+    <string name="convert">Convert</string>
 </resources>
